[tool.poetry]
name = "biocypher-project-template"
version = "0.1.0"
description = "Template for creating a BioCypher-driven knowledge graph"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
    "Andreas Meyer <andreas.maier-1@uni-hamburg.de>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = { git = "https://github.com/saezlab/biocypher.git", branch = "modularise" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
