[tool.poetry]
name = "biocypher-project-template"
version = "0.1.0"
description = "Template for creating a BioCypher-driven knowledge graph"
authors = [
    "Sebastian Lobentanzer <sebastian.lobentanzer@gmail.com>",
    "Andreas Maier <andreas.maier-1@uni-hamburg.de>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
biocypher = "^0.5.4"
requests = "^2.31.0"
treelib = "1.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80